--- a/src/components/ProjectsList/ProjectsList.module.scss
+++ b/src/components/ProjectsList/ProjectsList.module.scss
@@ -1,10 +1,30 @@
 @import "../../styles-utils/mixins.scss";
 
+.projects_section {
+  max-width: 80vw;
+  margin: 0 auto;
+}
+
 .project_list {
     @include list-styles;
-
-    @include flex-container(row, center, center, 70px, 10px);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    @include respond-to('tablet') {
+      grid-template-columns: 1fr 1fr;
+    }
+  
+    @include respond-to('mobile') {
+      grid-template-columns: 1fr;
+    }
+    align-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
+    row-gap: 70px;
+    column-gap: 20px;
+}
+
+.projects_item {
+  flex-grow: 1;
 }
 
 .title {
