--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -12,6 +12,7 @@
   width: 100%;
   height: 100%;
   box-sizing: border-box;
+  min-width: $min-mobile-width;
 
   @include respond-to('desktop') {
     padding: 40px 165px 90px 165px;
